--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -8,6 +8,7 @@
 </head>
 <div class="main-content">
 {{>header}}
+    <p> This site was created by {{name}}. It uses a weather API.</p>
 <img src="/img/robot.jpg" class="portrait">
 </div>
 {{>footer}}
